ipc/ipdl/test/ipdl/ok/race_MultiOut.ipdl
protocol race_MultiOut {
child:
    Msg1();
    Msg1_();
parent:
    Msg2();
    Msg2_();

start state S15:
    send Msg1 goto S16 or S17;
    recv Msg2 goto S18 or S19;

state S16:
    recv Msg2 goto S20;
    recv Msg2_ goto S18;

state S17:
    recv Msg2 goto S20;
    recv Msg2_ goto S15;

state S18:
    send Msg1 goto S20;
    send Msg1_ goto S15;

state S19:
    send Msg1 goto S20;
    send Msg1_ goto S16;

state S20:
    send Msg1 goto S20;
    send Msg1_ goto S20;
    recv Msg2 goto S20;
    recv Msg2_ goto S20;

};
